# trascrivi.ai

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  models.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/transcription/: mod.rs
src/components/: AudioVisualizer.tsx  RecordingControls.tsx  Settings.tsx  TranscriptionList.tsx  TranscriptionView.tsx
src/services/: tauri.ts
src/store/: useAppStore.ts
src/types/: index.ts
