[package]
name = "trascrivi-ai"
version = "0.1.0"
description = "Intelligent audio transcription app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open", "fs-all", "notification-all"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
cpal = "0.15"
rodio = "0.17"
uuid = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio-stream = "0.1"
futures = "0.3"
printpdf = "0.6"
docx-rs = "0.4"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
